<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ConnectionAddNewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/connection_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/connection_add_title" />

        <EditText
            android:id="@+id/connection_add_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connection_add_title"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/connection_add_title_hint"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/connection_list_add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connection_add_title_edit"
            android:text="@string/connection_add_address" />

        <EditText
            android:id="@+id/connection_add_address_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connection_list_add_address"
            android:ems="10"
            android:inputType="textUri"
            android:hint="@string/connection_add_address_hint"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/connection_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connection_add_address_edit"
            android:text="@string/connection_add_user" />

        <EditText
            android:id="@+id/connection_add_user_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connection_add_user"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/connection_add_user_hint"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/connection_add_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connection_add_user_edit"
            android:text="@string/connection_add_pass" />

        <EditText
            android:id="@+id/connection_add_pass_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connection_add_pass"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/connection_add_pass_hint"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/connection_add_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/connection_add_confirm_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>